# scraper-mercado-livre-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  celular.json
scrap_lib/: Cargo.toml
scrap_lib/src/: extractor.rs  lib.rs  models.rs  pagination.rs  scrap.rs  scraper.rs  storage.rs
src/: main.rs
