[package]
name = "WebScrapper"
version = "0.2.1"
edition = "2024"


[dependencies]
# para limpar a tela
clearscreen = "4.0.2"
#scrap 
scrap_lib = {path = "scrap_lib"}
# O controlador do navegador 
thirtyfour = "0.36.1" 
# O runtime assíncrono obrigatório
tokio = { version = "1", features = ["full"] } 